--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.3.1",
+    "classnames": "^2.3.1",
+    "mongodb": "^4.1.3",
+    "mongoose": "^6.5.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
