--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.1",
     "@svgr/webpack": "^6.3.1",
     "classnames": "^2.3.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.5.0",
     "next": "12.2.3",
+    "next-auth": "^4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.0",
