--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "classnames": "^2.3.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.6.1",
+    "mongoose-unique-validator": "^3.1.0",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.54.0",
-    "swr": "^1.3.0"
+    "sass": "^1.54.0"
   },
   "devDependencies": {
+    "@types/mongoose-unique-validator": "^1.0.6",
     "@types/node": "18.6.1",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
