--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@auth0/nextjs-auth0": "^1.9.1",
     "@svgr/webpack": "^6.3.1",
     "classnames": "^2.3.1",
+    "formidable": "^2.0.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.6.1",
     "mongoose-unique-validator": "^3.1.0",
     "next": "12.2.3",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.54.0"
   },
   "devDependencies": {
+    "@types/formidable": "^2.0.5",
     "@types/mongoose-unique-validator": "^1.0.6",
     "@types/node": "18.6.1",
     "@types/react": "18.0.15",
