Implemented RTK store, Mongoose ODM populate...

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.1",
+    "@reduxjs/toolkit": "^1.8.6",
     "@svgr/webpack": "^6.3.1",
     "classnames": "^2.3.1",
     "formidable": "^2.0.1",
@@ -18,8 +19,10 @@
     "mongoose-unique-validator": "^3.1.0",
     "next": "12.2.3",
     "next-connect": "^0.13.0",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
     "sass": "^1.54.0"
   },
   "devDependencies": {
