--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.4",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/formidable": "^2.0.5",
